k8s/telemetry/base/namespace.yaml
# Namespace where the Telemetry will be created
apiVersion: v1
kind: Namespace
metadata:
  name: telemetry
