k8s/telemetry/base/otel-collector.yaml

# Otel-Collector Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector-deployment
  labels:
    app: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
        - args:
            - --config
            - /etc/otelcol/otel-collector-config.yml
          image: otel/opentelemetry-collector-contrib:latest
          imagePullPolicy: IfNotPresent
          name: otel-collector
          ports:
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 8999
          volumeMounts:
            - mountPath: /etc/otelcol
              name: otel-collector-volume
      restartPolicy: Always
      volumes:
        - name: otel-collector-volume
          configMap:
            name: otel-collector-configmap
            items:
              - key: otel-collector-config.yml
                path: otel-collector-config.yml

---

# Otel-Collector Service
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-service
spec:
  selector:
    app: otel-collector
  ports:
    - name: "4317"
      port: 4317
      targetPort: 4317
    - name: "4318"
      port: 4318
      targetPort: 4318
    - name: "8999"
      port: 8999
      targetPort: 8999
